@@ -139,7 +139,7 @@ public class RemoteMaster extends JP1Frame implements ActionListener, PropertyCh
 
   /** Description of the Field. */
   public final static String version = "v2.10";
-  public final static int buildVer = 4;
+  public final static int buildVer = 5;
   
   public enum WavOp { NEW, MERGE, SAVE, PLAY };
   
@@ -380,6 +380,8 @@ public class RemoteMaster extends JP1Frame implements ActionListener, PropertyCh
   private static JMenuItem parseIRDBItem = null;
   
   private static JMenuItem xziteOpsItem = null;
+  
+  private static JMenuItem xziteRegItem = null;
   
   private static JMenuItem xziteReformatItem = null;
   
@@ -3073,6 +3075,14 @@ public class RemoteMaster extends JP1Frame implements ActionListener, PropertyCh
     
     menu.addSeparator();
     
+    xziteRegItem = new JMenuItem( "Show XSight registry key" );
+    xziteRegItem.setToolTipText( "<html>Displays the path to the registry key for Enhanced Power<br>"
+        + "Management for the last connected XSight remote, with<br>"
+        + "instructions on how to disable or enable this setting.");
+    xziteRegItem.addActionListener( this );
+    xziteRegItem.setVisible( false );
+    menu.add( xziteRegItem );
+    
     xziteOps = new JMenu( "XSight operations" );
     menu.add( xziteOps );
     xziteOps.setVisible( false );
@@ -4874,10 +4884,18 @@ public class RemoteMaster extends JP1Frame implements ActionListener, PropertyCh
       ioOut.setUse( use );
     }
     
+    CommHID.lastRegistryKey = null;
+    xziteRegItem.setVisible( false );
     if ( ioNeedsPowerManagementCheck( ioOut ) )
     {
       CommHID ioHID = ( CommHID )ioOut;
       int enabled = ioHID.getEnhancedPowerManagementStatus();
+
+      if ( enabled >= 0 )
+      {
+        CommHID.lastRegistryKey = ioHID.getRegistryKey();
+        xziteRegItem.setVisible( true );
+      }
 
       if ( enabled < 0 )
       {
@@ -4885,71 +4903,43 @@ public class RemoteMaster extends JP1Frame implements ActionListener, PropertyCh
       }
       else if ( enabled > 0 )
       {
+        System.err.println( "Attempting to disable Enhanced Power Management" );
         String title = "Enhanced Power Management";
-        String message = 
-            "Uploading or downloading from this remote requires Enhanced Power Management to\n"
-                + "be disabled in the Windows Registry.  This change requires administrative privileges.\n"
-                + "You have a choice of two methods to do this:\n\n"
-                + "Method A:  RMIR can do it for you, but you will have to close this RMIR session\n"
-                + "(press the Cancel button in this message) and open it again in administrative mode.\n"
-                + "To do so, right-click the RMIR shortcut (NOT the RemoteMaster.jar file) and select \n"
-                + "\"Run as administrator\".  Then repeat the download attempt and when you come back\n"
-                + "to this message, press the Method A button.\n\n"
-                + "Method B:  Use the Registry Editor (regedit.exe) to make the change manually.  If you\n"
-                + "press the Method B button, it will display detailed instructions on exactly how to do this.\n"
-                + "With this method you do not have to close this RMIR session, so you can keep the\n"
-                + "instructions displayed.";
-        String[] options = { "Method A", "Method B", "Cancel" };
-        int reply = JOptionPane.showOptionDialog( this, message, title, JOptionPane.YES_NO_CANCEL_OPTION, 
-            JOptionPane.INFORMATION_MESSAGE, null, options, options[ 2 ] );
-            
-        if ( reply == 0 )
+        Response response = ioHID.setEnhancedPowerManagementEnabled( false );
+        if ( response.error != null )
         {
-          Response response = ioHID.setEnhancedPowerManagementEnabled( false );
-          int msgType = JOptionPane.INFORMATION_MESSAGE;
-          String msg = null;
-          if ( response.error != null )
+          System.err.println( response.error );
+          String message = 
+              "Uploading or downloading from this remote requires Enhanced Power Management to\n"
+                  + "be disabled in the Windows Registry.  The change is persistent so this only needs\n"
+                  + "to be done once.  For RMIR to make this change, it must be run as adminstrator.\n"
+                  + "To do this, right-click an RMIR shortcut, select \"Run as administrator\" and then\n"
+                  + "do a download from the remote.  The change will be made automatically.\n\n"
+                  + "If you would prefer to use the Registry Editor to make this change, open the\n"
+                  + "menu item \"Show XSight registry key\" on the Advanced menu for instructions.";
+          JOptionPane.showMessageDialog( this, message, title, JOptionPane.INFORMATION_MESSAGE );
+          ioOut = null;
+        }
+        else
+        {
+          System.err.println( response.output );
+          ioHID.closeRemote();
+          System.err.println( "Requesting disconnection and reconnection" );
+          String message = 
+              "Enhanced Power Management has been disabled for this remote.\n"
+                  + "For this to take effect, now please disconnect the remote from\n"
+                  + "the PC, then reconnect it, before pressing OK.";
+          JOptionPane.showMessageDialog( this, message, title, JOptionPane.INFORMATION_MESSAGE );
+          String commPortName = ioHID.openRemote( portName );
+          if ( commPortName == null || commPortName.isEmpty() )
           {
-            msgType = JOptionPane.ERROR_MESSAGE;
-            msg = response.error;
-            msg += "\nIf access is denied, it is usually because RMIR has not been run\n"
-                + "as administrator.  The required registry edit can only be made in\n"
-                + "administrative mode.  You need to close RMIR and re-open it by\n"
-                + "right-clicking the RMIR shortcut (NOT the RemoteMaster.jar file)\n"
-                + "and selecting \"Run as administrator\".";
+            ioOut = null;
           }
           else
           {
-            msg = response.output;
-            msg += "\nFollowing a successful registry edit, you need to disconnect the\n"
-                + "remote from the PC and then reconnect it.  When you continue from\n"
-                + "here by pressing OK, it will show \"No remotes found!\", but if you\n"
-                + "repeat the download (there is no need to close and re-open RMIR) it\n"
-                + "will work normally.  RMIR only needs to be run as administrator to\n"
-                + "make this change.  Subsequent RMIR sessions should be made in standard\n"
-                + "mode in the usual way.  This setting change is normally persistent but\n"
-                + "may need to be repeated after a Windows update.";
+            ioOut = ioHID;
           }
-          JOptionPane.showMessageDialog( this, msg, title, msgType );            
         }
-        else if ( reply == 1 )
-        {
-          message = 
-              "Here is how to use the Registry Editor to disable Enhanced Power Management.  You can\n"
-                  + "use any means to open the Registry Editor, but the simplest is to select \"Run\" from\n"
-                  + "the Start menu and enter \"regedit\" (without the quotes) in the text box that then opens.\n"
-                  + "The registry key you need to change is at:\n\n"
-                  + ( ( CommHID )ioOut ).getRegistryKey() + "\n\n"
-                  + "where you need to change the value of \"EnhancedPowerManagementEnabled\" from 1 to 0.\n"
-                  + "Navigate to this entry, then edit it by right-clicking and selecting Modify.\n\n"
-                  + "After this change, you need to disconnect the remote from the PC and then reconnect it.\n"
-                  + "When you continue from here by pressing OK, it will show \"No remotes found!\", but if you\n"
-                  + "repeat the download (there is no need to close and re-open RMIR) it will work normally.\n"
-                  + "This setting change is normally persistent but may need to be repeated after a Windows\n"
-                  + "update.";
-          JOptionPane.showMessageDialog( null, message, title, JOptionPane.ERROR_MESSAGE );;
-        }
-        ioOut = null;
       }
     }
     return ioOut;
@@ -5638,6 +5628,18 @@ public class RemoteMaster extends JP1Frame implements ActionListener, PropertyCh
         {
           rawDataPanel.set( remoteConfig );
         }
+      }
+      else if ( source == xziteRegItem )
+      {
+        String title = "Editing the Windows Registry for XSight/Nevo remotes";
+        String message = 
+            "Enhanced Power Management must be disabled for an XSight/Nevo remote used with RMIR.\n"
+                + "To change this setting with the Registry Editor (regedit.exe), open it and navigate to the\n"
+                + "following registry key:\n\n" + CommHID.lastRegistryKey + "\n\n"
+                + "where you need to edit the value of \"EnhancedPowerManagementEnabled\" by right-clicking\n"
+                + "it and selecting Modify.  Set it to 0 to disable it or 1 to enable it.  After this change, you\n"
+                + "need to disconnect the remote from the PC and then reconnect it.";
+        JOptionPane.showMessageDialog( null, message, title, JOptionPane.INFORMATION_MESSAGE );
       }
       else if ( source == parseIRDBItem )
       {
